// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spinner when not visible should not render the spinner 1`] = `
<div>
  
</div>
`;

exports[`spinner when visible should render the spinner 1`] = `
<div>
  <i
    class="fa fa-spinner fa-spin"
  />
</div>
`;
